--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -102,6 +102,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NaesteUge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TilmeldSpisning.cs" />
   </ItemGroup>
