--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VMNaesteUgePlan.cs" />
+    <Compile Include="VMOpretBruger.cs" />
     <Compile Include="VMTilmeldSpisning.cs" />
   </ItemGroup>
   <ItemGroup>
