--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -101,6 +101,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelayArgCommand.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="VMNaesteUgePlan.cs" />
     <Compile Include="VMOpretBruger.cs" />
     <Compile Include="VMTilmeldSpisning.cs" />
