--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -95,15 +95,28 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BetalingPage.xaml.cs">
+      <DependentUpon>BetalingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Bruger.cs" />
     <Compile Include="FileHandler.cs" />
     <Compile Include="Job.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NaesteUgePlanPage.xaml.cs">
+      <DependentUpon>NaesteUgePlanPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="OpretBrugerPage.xaml.cs">
+      <DependentUpon>OpretBrugerPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayArgCommand.cs" />
     <Compile Include="RelayCommand.cs" />
+    <Compile Include="TilmeldSpisningPage.xaml.cs">
+      <DependentUpon>TilmeldSpisningPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="VMBetaling.cs" />
     <Compile Include="VMNaesteUgePlan.cs" />
     <Compile Include="VMOpretBruger.cs" />
     <Compile Include="VMTilmeldSpisning.cs" />
@@ -130,9 +143,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BetalingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NaesteUgePlanPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="OpretBrugerPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TilmeldSpisningPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
