--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -129,6 +129,8 @@
     <None Include="S1G7Projekt_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Billeder\UIDone.jpg" />
+    <Content Include="Billeder\UIDone.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -169,6 +171,7 @@
       <Name>Behaviors SDK %28XAML%29</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
