Baggrund faerdig og implementeret

--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Billeder\UIDone.png" />
+    <Content Include="Billeder\UI_Done.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
