prøvet og fixe grid data context på naesteUgePlan

--- a/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
+++ b/S1G7Projekt/S1G7Projekt/S1G7Projekt.csproj
@@ -116,6 +116,7 @@
     <Compile Include="TilmeldSpisningPage.xaml.cs">
       <DependentUpon>TilmeldSpisningPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UgeHandler.cs" />
     <Compile Include="VMBetaling.cs" />
     <Compile Include="VMNaesteUgePlan.cs" />
     <Compile Include="VMOpretBruger.cs" />
